<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#27005D"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/plus"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_margin="20dp"
        android:fontFamily="@font/aclonica"
        android:onClick="increase_num"
        android:text="@string/increase_value"
        android:textAlignment="center"
        android:textColor="#27005D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:fontFamily="@font/aclonica"
        android:onClick="decrease_num"
        android:text="@string/decrease_value"
        android:textAlignment="center"
        android:textColor="#27005D"
        android:textSize="50sp"
        android:textStyle="bold"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_margin="1dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/hint"
        android:textAlignment="center"
        android:textColor="#E4F1FF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/title"
        android:layout_width="353dp"
        android:layout_height="72dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:shadowColor="#AED2FF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:layout_marginTop="10dp"
        android:shadowRadius="50"
        android:text="@string/game_title"
        android:textAlignment="center"
        android:textColor="#E4F1FF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annie_use_your_telescope"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/intial_num"
        android:textAlignment="center"
        android:textColor="#F57C00"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <Button
        android:id="@+id/check"
        android:layout_width="80dp"
        android:layout_height="67dp"
        android:background="@drawable/round_button_check"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="check"
        android:shadowColor="#AED2FF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="100"
        android:text="@string/check"
        android:textColor="#27005D"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:background="@drawable/round_button_check"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="reset"
        android:shadowColor="#AED2FF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="100"
        android:text="@string/reset"
        android:textColor="#27005D"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <Button
        android:id="@+id/RULES"
        android:layout_width="80sp"
        android:layout_height="50sp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/RULES"
        android:background="@drawable/rules_button"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:shadowColor="#27005D"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:textColor="#27005D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919"
        android:onClick="rulesPage"/>

    <TextView
        android:id="@+id/lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="Lives = 6"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/border"
        android:fontFamily="@font/titan_one"
        android:text="@string/close"
        android:textAlignment="center"
        android:textAppearance="@color/white"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="CLOSE"/>
</androidx.constraintlayout.widget.ConstraintLayout>